# f4synth

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
src/: cs43l22.rs  dma.rs  i2s.rs  main.rs  melody.rs  sequencer.rs  waves.rs
