[package]
authors = ["Brian Carrigan <brian@bcarrigan.com>"]
edition = "2018"
readme = "README.md"
name = "f4synth"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
undosa = { path = "../undosa" }

# Uncomment for the device example.
[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal"
branch = "master"
features = ["rt", "stm32f407"]

# this lets you use `cargo fix`!
[[bin]]
name = "f4synth"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
